--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
    <!-- Honey-Making Process Section -->
    <div class="process-section">
-    <h2>Our Honey-Making Process</h2>
+    <h2 class="section-title">Our Honey-Making Process</h2>
     <div class="process-steps">
       <!-- Step 1: Beekeeping -->
       <div class="process-step">
